tests/semantic_errors/gajdosik6_3.tl
require "ifj21"
--redefinicia
global name : function (integer) : string, string, string
function name    (a : integer, a : integer) : string, string, string end

function main()
    while 1 do
        while 1 do
            while 1 do
                while 1 do
                    local num : num = 89
                    local num : num = 89
                end
	    num = 90
            end
        end
    end
end

main()